edited contact details hyperlink

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <td>⭐</td>
   </tr>
 </table>
-  <h3><a href="C:\Users\Admin\Desktop\python\HTML-personal site\Contact details.html">CONTACT ME</a> </h3>
+  <h3><a href="https://github.com/momcaley/cv/blob/main/Contact%20details.html">CONTACT ME</a> </h3>
 </body>
 
 </html>
