--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
@@ -103,7 +102,7 @@
     <td>⭐</td>
   </tr>
 </table>
-  <h3><a href="https://github.com/momcaley/cv/blob/main/Contact%20details.html">CONTACT ME</a> </h3>
+  <h3><a href="Contact details.html">CONTACT ME</a> </h3>
 </body>
 
 </html>
